baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__mixed_field_index_access.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR " string"
        WORD "string"
    FIELD
      WORD "profile"
      TYPE_EXPR " Profile"
        WORD "Profile"
    FIELD
      WORD "tags"
      TYPE_EXPR " string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Profile"
    L_BRACE "{"
    FIELD
      WORD "bio"
      TYPE_EXPR " string"
        WORD "string"
    FIELD
      WORD "settings"
      TYPE_EXPR " Settings"
        WORD "Settings"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Settings"
    L_BRACE "{"
    FIELD
      WORD "theme"
      TYPE_EXPR " string"
        WORD "string"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "MixedAccess"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "user"
        TYPE_EXPR " User"
          WORD "User"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "firstTag"
          EQUALS "="
          INDEX_EXPR
            PATH_EXPR " user.tags"
              WORD "user"
              DOT "."
              WORD "tags"
            L_BRACKET "["
            INTEGER_LITERAL "0"
            R_BRACKET "]"
        SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "nestedAccess"
          EQUALS "="
          PATH_EXPR " user.profile.settings.theme"
            WORD "user"
            DOT "."
            WORD "profile"
            DOT "."
            WORD "settings"
            DOT "."
            WORD "theme"
        SEMICOLON ";"
        RETURN_STMT "

  return firstTag"
          KW_RETURN "return"
          WORD "firstTag"
        SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
  Expected Expected expression, found Expected expression
  Expected Expected expression, found Expected expression
  Expected Expected expression, found Expected expression
